--- a/chainmart-be/.env
+++ b/chainmart-be/.env
@@ -2,7 +2,7 @@ DB_HOST=chainmart-db-01.cyiwmiajetd8.ap-southeast-1.rds.amazonaws.com
 DB_PORT=5432
 DB_USERNAME="postgres"
 DB_PASSWORD="Chainmart123"
-DB_DATABASE="postgres_dev"
+DB_DATABASE="postgres"
 
 CLIENT_URL=https://chainmart.site
 CUSTOMER_URL=http://localhost:8080
