--- a/chainmart-be-carts/.env
+++ b/chainmart-be-carts/.env
@@ -7,6 +7,5 @@ DB_DATABASE="postgres_carts"
 KAFKA_HOST=kafka
 KAFKA_PORT=9092
 
-REDIS_HOST=redis-16214.c292.ap-southeast-1-1.ec2.cloud.redislabs.com
-REDIS_PORT=16214
-REDIS_PASSWORD=krR3G2ywwJD7BVuQP79W9GSGGMVI8Nbh
+REDIS_HOST=redis
+REDIS_PORT=6379
