--- a/chainmart-be-batches/.env
+++ b/chainmart-be-batches/.env
@@ -4,5 +4,5 @@ DB_USERNAME=postgres
 DB_PASSWORD=Chainmart123
 DB_DATABASE="postgres_batches"
 
-KAFKA_HOST=localhost
+KAFKA_HOST=kafka
 KAFKA_PORT=9092
