--- a/chainmart-be-batches/.env
+++ b/chainmart-be-batches/.env
@@ -1,7 +1,7 @@
-DB_HOST=chainmart-db-01.cyiwmiajetd8.ap-southeast-1.rds.amazonaws.com
+DB_HOST=database-2.csqpzyyrpdid.ap-southeast-1.rds.amazonaws.com
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=Chainmart123
+DB_USERNAME="postgres"
+DB_PASSWORD="JMkfBAjYQJNTKX28k884"
 DB_DATABASE="postgres_batches"
 
 KAFKA_HOST=kafka
