--- a/chainmart-be-products/.env
+++ b/chainmart-be-products/.env
@@ -1,4 +1,4 @@
-MONGODB_URI="mongodb+srv://root:XrEwLxZmhxuxaAsv@cluster0.rhr9qdt.mongodb.net/chainmartDevDB?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://root:XrEwLxZmhxuxaAsv@cluster0.rhr9qdt.mongodb.net/chainmart-mongodb?retryWrites=true&w=majority"
 
 KAFKA_HOST=kafka
 KAFKA_PORT=29092
