--- a/chainmart-be-chatbot/.env
+++ b/chainmart-be-chatbot/.env
@@ -1,6 +1,2 @@
-host="chainmart-db-01.cyiwmiajetd8.ap-southeast-1.rds.amazonaws.com"
-port="5432"
-database="postgres"
-user="postgres"
-password="Chainmart123"
 rasa_uri="http://rasa:5005/webhooks/rest/webhook"
+chainmart_be=http://chainmart-be:3000
