--- a/chainmart-elastic/docker-compose.yml
+++ b/chainmart-elastic/docker-compose.yml
@@ -58,9 +58,8 @@ services:
     container_name: kibana
     image: docker.elastic.co/kibana/kibana:8.9.0
     environment:
-      - SERVER_NAME=elastic-monitor.chainmart.site
       - SERVER_PORT="5601"
-      - ELASTICSEARCH_HOSTS=http://es01:9200
+      - ELASTICSEARCH_HOSTS=http://localhost:9200
       - ELASTICSEARCH_USERNAME=chainmart
       - ELASTICSEARCH_PASSWORD=Chainmart123
     networks:
